deploy/cicd/tekton-parameterized/kustomize/base/1-git-repo-route.yaml

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: 1-git-repo
    name: 1-git-repo
spec:
    host: 1.com
    path: /el-1-git-repo
    port:
        targetPort: port-8080
    tls:
        termination: passthrough
    to:
        kind: Service
        name: 1-git-repo
        weight: 1
status:
    ingress:
        - {}

...
