deploy/cicd/tekton-parameterized/kustomize/base/7-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    creationTimestamp: null
    labels:
        move2kube.konveyor.io/service: "7"
    name: "7"
spec:
    rules:
        - host: 7.com
          http:
            paths:
                - backend:
                    service:
                        name: el-7-git-repo
                        port:
                            name: port-8080
                  path: /el-7-git-repo
                  pathType: Prefix
status:
    loadBalancer: {}

...
